Create a few sample graphs that roughly represent real refactorings #4
- Identifier node.